* Fixed various bugs when handling hidden elements. They are now rendered at any time, but easily made visible through a new checkbox on top of the menubar * Minor cleanups in a hook and for some CSS selectors
git-svn-id: https://svn.typo3.org/TYPO3v4/CoreProjects/feedit/trunk@1663 743128fe-103e-dd11-99c4-001b210b3e58

--- a/feeditadvanced/res/css/fe_edit_advanced.css
+++ b/feeditadvanced/res/css/fe_edit_advanced.css
@@ -119,7 +119,7 @@ div#feEditAdvanced-menuBar div#feEditAdvanced-contextToolbar a.feEditAdvanced-bu
 div#feEditAdvanced-menuBar div#feEditAdvanced-pageEditToolbar { float: left; width: 80%; }
 div#feEditAdvanced-menuBar div#feEditAdvanced-pageEditToolbar div.feEditAdvanced-allWrapper { display: block; }
 div#feEditAdvanced-menuBar div#feEditAdvanced-pageEditToolbar a.feEditAdvanced-button { float: left; display: block; }
-
+div#feEditAdvanced-menuBar div#feEditAdvanced-pageEditToolbar div#feEditAdvanced-showHiddenContent { float: left; padding: 4px 0 2px 10px;  color: #fff; }
 
 /* ---------------------- Top Menu: List of Content Element Types ---------------------------- */
 div#feEditAdvanced-contentTypeToolbar {
